--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,10 +1,16 @@
-<h1> Blog Home</h1>
+{% extends 'base.html' %}
 
-<h3> Posts </h3>
-
+{% block content %}
 {%for post in posts%}
-    <h4> {{post.title}} </h4>
-    <h7> {{post.author}} </h7>
-    <p> {{post.content}} </p>
-    <small> {{post.date_posted}} </small>
+<article class="media content-section">
+    <div class="media-body">
+        <div class="article-metadata">
+            <a class="mr-2" href="#">{{ post.author }}</a>
+            <small class="text-muted">{{ post.date_posted }}</small>
+        </div>
+        <h2><a class="article-title" href="#">{{ post.title }}</a></h2>
+        <p class="article-content">{{ post.content }}</p>
+    </div>
+</article>
 {%endfor%}
+{% endblock %}
