--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -4,14 +4,26 @@
 {% block content%}
 
 <div class="content-section">
-        <div class="media">
-          <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
-          <div class="media-body">
-            <h2 class="account-heading"> {{ user.username }} </h2>
-            <p class="text-secondary"> {{ user.email }} </p>
-          </div>
-        </div>
-        <!-- FORM HERE -->
-      </div>
+  <div class="media">
+    <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
+    <div class="media-body">
+      <h2 class="account-heading"> {{ user.username }} </h2>
+      <p class="text-secondary"> {{ user.email }} </p>
+    </div>
+  </div>
+  <form method="POST" enctype="multipart/form-data">
+    {% csrf_token%}
+    <fieldset class="form-group">
+      <legend class="border-bottom mb-4">Profile Info</legend>
+      {{ u_form | crispy }}
+      {{ p_form | crispy }}
+    </fieldset>
+    <div class="form-group">
+      <button class="btn btn-outline-info" type=='submit'> Update </button>
+    </div>
+  </form>
+</div>
 
+ <!-- To fix bootstrap4 error with image choosing not shown correctly -->
+<script>document.querySelector(".custom-file-label").className += " mt-5"</script>
 {% endblock %}
